Update JAVAFX_RUNTIME_SOLUTIONS.md